# vt

./: .gitattributes  .gitignore  Cargo.toml  README.md  index.html  index.js  index2.html  package.json  packages.dhall  packages.json  packages.jsonnet  psc-package.json  purs-packages.nix  shell.nix  spago-packages.nix  spago.dhall  webpack.config.js
backend/: Cargo.toml
backend/src/: actix.rs  db.rs  files.rs  lib.rs  main.rs
lib/: Cargo.toml
lib/src/: types.rs
nix/: build-purs.nix  easy-ps.nix  esbuild-drv.nix  generate-purs-packages.nix  package-set-archive.nix  packages-json.nix  purs-setup.nix
src/: FrontEnd.purs  NameParser.js  NameParser.purs  Routes.purs  db.rs  files.rs  index.jsx  lib.rs  main.rs  types.rs
src/FrontEnd/: UI.purs  Window.js  Window.purs
src/Utils/: Console.js  Console.purs  React.js  React.purs
wasm/: Cargo.toml
wasm/src/: lib.rs
