[package]
name = "backend"
version = "0.1.0"
authors = ["justinwoo <moomoowoo@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "*"
actix-web = "2.0.0"
actix-files = "*"
regex = "1.3.3"
rusqlite = "0.21.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
tokio = { version = "0.2.9", features = ["process"] }
vt = { path = "../lib" }