[package]
name = "wasm"
version = "0.1.0"
authors = ["justinwoo <moomoowoo@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.58", features = ["serde-serialize" ] }
js-sys = "*"
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
vt = { path = "../lib" }
regex = "1.3.3"